2010-04-24  <jostb@intern>

	* server/buildJavaProxy.php: Removed whitespace before <?.

	* server/buildJavaProxy.php: Security fix; Do not allow users to
	include PHP files outside of the DOCUMENT_ROOT, unless the request
	came from 127.0.0.1.

	* server/php/java/script/servlet/InvocablePhpServletRemoteHttpServerScriptEngine.java
	(setNewScriptFileContextFactory): The bridge doesn't include
	remote resources anymore. Pass a local file instead of a remote
	resource.

	* VERSION, php-java-bridge.spec: Version 6.1.2.1 released

2010-04-14  <jostb@intern>

	* server/META-INF/java/Protocol.inc
	(read): http_error may be sent with content_length or chunked
	(parseHeaders): Fixed typo

2010-04-11  <jostb@intern>

	* CVS_Release.sh, php-java-bridge.spec: clean before creating
	documentation.

	* server/php/java/bridge/Util.java
	(unsetLogger): New procedure
	(getLogger): Rewritten

	* server/php/java/script/InteractivePhpScriptEngine.java
	(eval): flush the output on error

	* server/php/java/script/SimplePhpScriptEngine.java
	(getProcessEnvironment): rewritten
	(pool, doEval): Use a thread pool for the PHP continuations

	* server/php/java/script/servlet/EngineFactory.java
	(destroy): New method
	(addManaged): Set the logger for the current thread

	* server/php/java/script/servlet/EngineFactoryHelper.java
	(destroyEngineFactory): remove current thread logger

	* server/php/java/script/servlet/InvocablePhpServletLocalHttpServerScriptEngine.java
	(evalInternal): removed: renamed to evalWithPrivileges
	(evalWithPrivileges): new from evalInternal
	(evalShortPath): Use thread pool
	(release): remove current thread logger

	* server/php/java/script/servlet/PhpServletScriptEngine.java
	(eval): set logger
	(evalInternal): removed: renamed to evalWithPrivileges
	(evalWithPrivileges): new from evalInternal

	* server/php/java/servlet/ContextLoaderListener.java
	(contextInitialized): set logger

	* server/php/java/servlet/fastcgi/FastCGIServlet.java